Make sure we don't get overflow

--- a/src/components/Snaps/Snaps.sass
+++ b/src/components/Snaps/Snaps.sass
@@ -5,6 +5,7 @@
   grid-gap: 2px
   grid-auto-rows: 50%
   min-height: 0
+  overflow: hidden
 
   .snap
     width: 100%
